app/assets/stylesheets/questionnaire.scss
/* ... */
.notchanged {
  input[type=range]::-ms-thumb, input[type=range]::-moz-range-thumb, input[type=range]::-webkit-slider-thumb {
    background: $unchanged-range-thumb;
  }

  input[type=range] + .thumb, input[type=range]::-webkit-slider-thumb {
    background-color: $unchanged-range-thumb;
  }
  &.no-initial-thumb {
    input[type=range]::-ms-thumb, input[type=range]::-moz-range-thumb, input[type=range]::-webkit-slider-thumb {
      background: transparent;
    }

    input[type=range] + .thumb, input[type=range]::-webkit-slider-thumb {
      background-color: transparent;
    }
  }
}

// Note: It doesn't work in Chrome (and possibly other browsers)
// when we nest the thumb thingies under input[type=range] together.
input[type=range]::-webkit-slider-thumb {
  margin-top: -16px;
}

// Increase the font size of the balloon popup for the scroll thumb
input[type=range] + .thumb.active .value {
  font-size: 1.2rem;
  margin-left: 0;
  margin-top: 2px;
}

// Fix "the flattening" of input controls in IE.
input[type=range]::-ms-track {
  background: transparent;
  border-color: transparent;
  border-width: 35px 0;
  color: transparent;
}

// Fix that it cuts off the top and bottom when dragging the scroll thumb in Firefox.
input[type=range]:-moz-focusring {
  outline: none;
}

datalist {
  display: flex;
  justify-content: space-between;
  margin-top: -14px;
  color: #6c757d;
  padding-top: 0;
  width: calc(100% - 21.5px);
  margin-left: 10.5px;

  option {
    width: 2ex;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    background-image: image-url("tick.png");
    background-position-y: top;
    background-position-x: center;
    background-repeat: no-repeat;
    z-index: -1;
  }
}

.range-container {
  position: relative;
}

.range-value-label {
  opacity: 0;
  position: absolute;
}

.col .row.label-row {
  position: relative;
  width: calc(100% - 36px);
  margin-left: 18px;
  margin-right: 0;
  .col {
    padding: 0;
    &.left-align {
      transform: translateX(-17px);
    }
    &.right-align {
      transform: translateX(17px);
    }
  }
}

$vertical-range-top-margin: 11px;
$vertical-range-width: 85px;
$vertical-range-margin-left: 11px;
$vertical-range-min-width-label: 125px;
$vertical-range-height: 382px;
$vertical-range-padding-left: 23px;
$vertical-range-tick-margin-left: 26px;
$vertical-range-padding-top: 8px;

.vertical-range {
  &>.col.s3 {
    border-radius: 10px;
    width: $vertical-range-width;
    margin-left: $vertical-range-margin-left;
    padding-left: $vertical-range-padding-left;
    padding-right: 0;
  }
  &>.col.s9 {
    width: calc(100% - #{$vertical-range-margin-left + $vertical-range-width});
    height: $vertical-range-height;
    padding-left: 0;
  }
  .range-field {
    margin-top:0;

    span.thumb, span.thumb.active {
      display: none;
    }
  }

  input[type=range]::-webkit-slider-thumb {
    margin-top: -15px;
  }

  input[type=range]::-webkit-slider-runnable-track {
    height: 5px;
  }

  .range-labels-vertical {
    height: 100%;
    font-size: 13.3px;
    display: inline-block;

    .vertical-range-label-wrapper {
      height: 100%;
      padding-top: $vertical-range-top-margin;
      padding-bottom: $vertical-range-top-margin;
      position: relative;

      &>span {
        &:first-child, &:last-child {
          width: 100%;
          min-width: $vertical-range-min-width-label;
          height: $vertical-range-top-margin + 1px;
          display: inline-block;
          background-color: white;
          position: absolute;
        }
        &:first-child {
          margin-top: -1 * $vertical-range-top-margin - 1px;
        }
      }

      .vertical-range-label {
        display: inline-block;
        cursor: pointer;
        user-select: none;
        width: 100%;
        min-width: 1px;
        .vertical-range-tick {
          display: inline-block;
          margin-left: -1 * $vertical-range-tick-margin-left;
          padding-top: $vertical-range-padding-top;
          position: absolute;
        }
        .vertical-range-labeltext {
          display: inline-block;
          background-color: white;
          min-width: $vertical-range-min-width-label;
          width: 100%;
          height: 100%;
          padding-top: $vertical-range-padding-top;
          padding-right: 10px;
          padding-left: 8px;
          white-space: nowrap;
        }

        &.active {
          .vertical-range-labeltext {
            font-weight: 700;
            background-color: transparent;
          }
        }
      }
    }
  }

  input[type=range] {
    &.vranger {
      margin-top: 148px;
      margin-left: -161px;
      margin-bottom: 147px;
      padding-top: 42px;
      padding-bottom: 43px;
      width: 361px;
      transform: rotate(90deg);
      -moz-transform: rotate(90deg);
    }
  }
}

.gradient-bg {
  background: linear-gradient(#97c9ee 0%, #3ac7fc 8%, #93d4d0 17%, #00b34e 31%, #fde82b 50%, #efa528 69%, #eb572f 83%, #a92e26 93%);

  input[type=range]::-webkit-slider-runnable-track {
    background: white;
  }
}

@media only screen and (min-width: 800px) {
  .label-row {
    font-size: 13px;
  }
}
@media only screen and (min-width: 1000px) {
  .label-row {
    font-size: 14px;
  }
}
@media only screen and (min-width: 1201px) {
  .label-row {
    font-size: 15px;
  }
}

@media only screen and (max-width: 700px) {
  .range-value-label {
    opacity: 1;
    width: 100%;
    font-weight: 600;
    font-size: 15px;
    text-align: center;
  }
  .col .row.label-row {
    .col {
      display: none;
      &:first-child, &:last-child {
        display: block;
        width: 50% !important;
      }
      &:last-child {
        float: right;
      }
    }
  }
}



input[disabled].otherwise {
  cursor: pointer;
}

ol ol {
  list-style-type: lower-alpha;

  ol {
    list-style-type: decimal;
  }
}

.section-explanation {
  font-weight: bold;
}

.hidden {
  display: none;
}
/* ... */

